--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "𝐔𝐑𝐀𝐍𝐈𝐔𝐌 𝐗 𝐒𝐏𝐀𝐌",
-  "description": "ᴀ ᴘᴏᴡᴇʀғᴜʟʟ ᴀɴᴅ ғᴀsᴛ sᴘᴀᴍ ʙᴏᴛ @THE_URANIUM",
-  "logo": "https://telegra.ph/file/30976ecf96aa380dcf708.jpg",
+  "name": "𝐍𝐎𝐁𝐈𝐓𝐀_𝐗𝐃_𝐒𝐏𝐀𝐌",
+  "description": "𝑷𝑶𝑾𝑬𝑹𝑭𝑼𝑳𝑳 𝑨𝑵𝑫 𝑺𝑻𝑨𝑩𝑳𝑬 𝑩𝑶𝑻 𝑭𝑶𝑹 𝑺𝑷𝑨𝑴𝑴𝑰𝑵𝑮 𝑴𝑨𝑫𝑬 𝑼𝑷 𝑩𝒀 @Nobi_xxd",
+  "logo": "https://telegra.ph/file/8c0c0dc2721c54857acf0.jpg",
   "keywords": [
     "spambot",
     "telegram",
